Added composer dependency Updating gitignore Added skeleton for classes

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,13 @@
       "name": "Igor Pinchuk",
       "email": "kolgarn@yandex.ru"
     }
-  ]
+  ],
+  "require": {
+    "symfony/console": "^3.1"
+  },
+  "autoload": {
+    "psr-4": {
+      "SomeWork\\": "src/"
+    }
+  }
 }
